Complette without effects

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
     <link href="js/flexslider.css" rel="stylesheet" type="text/css" />
+    <script src="js/script-menu.js"></script>
     <!--<script src="js/slider.js"></script> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
@@ -17,18 +18,20 @@
 </head>
 <body>
 
-<header>
+<header id="navbar">
     <div class="container">
-        <h1><a href="#hero"><img src='images/logo.png' alt='Skewed Logo'/></a></h1>
+        <h1 id="logo"><a href="#hero"><img src='images/logo.png' alt='Skewed Logo'/></a></h1>
         <nav class='main-navigation'>
             <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#video">Video</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#parallax">Parallax</a></li>
-                <li><a href="#principles">Principles</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#achievements">Achievements</a></li>
+                <div class="itemsMenu">
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#video">Video</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#parallax">Parallax</a></li>
+                    <li><a href="#principles">Principles</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#achievements">Achievements</a></li>
+                </div>
             </ul>
         </nav>
     </div>
@@ -167,9 +170,34 @@
                 <h4>All-nighters Pulled</h4>
             </li>
         </ul>
+        <p class="achiev-descript">Lorem ipsum dolor sit amet, consectetur <span>adipiscing elit</span>. Fusce tristique finibus felis, eget molestie eros placerat vitae. Ut ut ipsum augue.</p>
+        <span class="author-descript">- Alfred Johnson, CEO Youtech</span>
     </div>
 </section>
 
+<section id="mail-list">
+    <div class="container">
+        <h2>Keep Up To Date</h2>
+        <p>Subscribe to our mailing list</p>
+        <form method="post" action="#" class="mail-form">
+            <input type="text" placeholder="Your name" name="name">
+            <input type="email" placeholder="Email address" name="email">
+            <input type="button" value="Subscribe" name="subscribe">
+        </form>
+    </div>
+</section>
+
+<footer>
+    <div class="container">
+        <ul class="social-list">
+            <li><a href="facebook.com"><span class="fa fa-facebook"></span></a></li>
+            <li><a href="twitter.com"><span class="fa fa-twitter"></span></a></li>
+            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+            <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
+            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+        </ul>
+        <p class="copyright-text">Copyright 2015 <span>Skewed</span>. All Rights Reserved </p>
+    </div>
 </footer>
 
 </body>
